<resources>
    <string name="app_name">جهاز مشروعات الخدمة الوطنية</string>
    <string name="route">الطريق</string>
    <string name="investor">المستثمر</string>
    <string name="location">الموقع</string>
    <string name="Area">المساحة</string>
    <string name="RentValue">القيمة الايجارية</string>
    <string name="Add">اضافة</string>
    <string name="Search">بحث</string>
    <string name="project_name">المشروع</string>
    <string name="price">سعر المتر</string>
    <string name="RentType">معدل الإيجار</string>
    <string name="start_date">بداية التعاقد</string>
    <string name="end_date">نهاية التعاقد</string>
    <string name="period">مدة التعاقد</string>
    <string name="annual_raise">الزيادة السنوية</string>
    <string name="notes">الملاحظات</string>
    <string name="add_project">إضافة مشروع</string>
    <string name="add_location">إضافة موقع</string>
    <string name="add_route">إضافة طريق</string>
    <string name="add_investor">إضافة مستثمر</string>
    <string name="search_route">بحث في الطرق</string>
    <string name="cancel">إلغاء</string>
    <string name="no_data">لا يوجد بيانات</string>
    <string name="delete_route">هل تريد حذف الطريق</string>
    <string name="delete">حذف</string>
    <string name="search_location">بحث في المواقع</string>
    <string name="delete_location">هل تريد حذف الموقع</string>
    <string name="add_rentrate">معدل إيجار</string>
    <string name="search_investors">بحث في المستثمرين</string>
    <string name="delete_investor">هل تريد حذف المستثمر</string>
    <string name="search_rentrate">بحث في معدل الإيجار</string>
    <string name="rentrate">معدل الإيجار</string>
    <string name="delete_rentrate">هل تريد حذف معدل الإيجار</string>
    <string name="choose_routes">اختر من الطرق</string>
    <string name="choose_investors">اختر من المستثمرين</string>
    <string name="choose_location">اختر من المواقع</string>
    <string name="choose_rent_type">اختر معدل الايجار</string>
    <string name="search_projects">بحث في المشاريع</string>
    <string name="delete_project">هل تريد حذف المشروع</string>
    <string name="add_currency">إضافة عملة</string>
    <string name="search_currency">البحث في العملات</string>
    <string name="currency">العملة</string>
    <string name="delete_currency">هل تريد حذف العملة؟</string>
    <string name="egyptian_value">القيمة بالمصري</string>
    <string name="edit_currency">تعديل العملة</string>
    <string name="edit_investor">تعديل مستثمر</string>
    <string name="edit_location">تعديل الموقع</string>
    <string name="edit_rent_rate">تعديل معدل الايجار</string>
    <string name="edit_route">تعديل الطريق</string>
    <string-array name="rent_type">
        <item>سنوي</item>
        <item>شهري</item>
        <item>نصف سنوي</item>
    </string-array>
</resources>
