<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        app:cardCornerRadius="10dp"
        android:elevation="10dp"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="200dp">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:id="@+id/textViewProject"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/Title1Style"
                android:textStyle="bold"
                tools:text="المشروع"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp" android:layout_height="50dp"/>

        <LinearLayout
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="vertical"
                android:background="@color/colorLightGrey"
                app:layout_constraintTop_toBottomOf="@+id/textViewProject"
                android:layout_width="match_parent" android:layout_height="0dp">
            <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">
                <TextView
                        android:layout_weight="1"
                        android:text="@string/route"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:background="@color/colorPrimaryDark"
                        style="@style/Title2Style"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
                <TextView
                        android:id="@+id/textViewValue"
                        android:layout_weight="2"
                        android:gravity="center"
                        tools:text="@string/route"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">
                <TextView
                        android:layout_weight="1"
                        android:text="@string/investor"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:background="@color/colorPrimaryDark"
                        android:gravity="center"
                        style="@style/Title2Style"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
                <TextView
                        android:id="@+id/textViewInvestor"
                        android:layout_weight="2"
                        android:gravity="center"
                        tools:text="@string/investor"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">
                <TextView
                        android:layout_weight="1"
                        android:text="@string/location"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:background="@color/colorPrimaryDark" android:gravity="center"
                        style="@style/Title2Style"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
                <TextView
                        android:id="@+id/textViewLocation"
                        android:layout_weight="2"
                        android:gravity="center"
                        tools:text="@string/location"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">
                <TextView
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:background="@color/colorPrimaryDark" android:text="@string/Area"
                        android:gravity="center"
                        style="@style/Title2Style"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
                <TextView
                        android:id="@+id/textViewArea"
                        android:layout_weight="2"
                        android:gravity="center"
                        tools:text="@string/Area"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">
                <TextView
                        android:layout_weight="1"
                        android:text="@string/RentValue"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:background="@color/colorPrimaryDark" android:gravity="center"
                        style="@style/Title2Style"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
                <TextView
                        android:id="@+id/textViewRentValue"
                        android:layout_weight="2"
                        android:gravity="center"
                        tools:text="@string/RentValue"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>