<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddActivity">

    <androidx.cardview.widget.CardView
            android:layout_margin="16dp"
            android:elevation="@dimen/cardview_default_elevation"
            app:cardCornerRadius="16dp"
            app:cardBackgroundColor="@color/colorGreen"
            android:id="@+id/cardAddProject"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="0dp"
            android:layout_height="80dp">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent">
            <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_business_white"
            />

            <TextView android:layout_width="match_parent"
                      style="@style/Title1Style"
                      android:textColor="@color/white"
                      android:layout_gravity="center"
                      android:layout_marginStart="16dp"
                      android:gravity="center"
                      android:layout_height="wrap_content"
                      android:text="@string/add_project"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:layout_margin="16dp"
            android:elevation="@dimen/cardview_default_elevation"
            app:cardCornerRadius="16dp"
            app:cardBackgroundColor="@color/colorGreen"
            android:id="@+id/cardAddRoute"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardAddProject"
            android:layout_width="0dp"
            android:layout_height="80dp">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent">
            <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_route_white"
            />

            <TextView android:layout_width="match_parent"
                      style="@style/Title1Style"
                      android:textColor="@color/white"
                      android:layout_gravity="center"
                      android:layout_marginStart="16dp"
                      android:gravity="center"
                      android:layout_height="wrap_content"
                      android:text="@string/add_route"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:layout_margin="16dp"
            android:elevation="@dimen/cardview_default_elevation"
            app:cardCornerRadius="16dp"
            app:cardBackgroundColor="@color/colorGreen"
            android:id="@+id/cardAddLocation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardAddRoute"
            android:layout_width="0dp"
            android:layout_height="80dp">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent">
            <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_location_white"
            />
            <TextView android:layout_width="match_parent"
                      style="@style/Title1Style"
                      android:textColor="@color/white"
                      android:layout_gravity="center"
                      android:layout_marginStart="16dp"
                      android:gravity="center"
                      android:layout_height="wrap_content"
                      android:text="@string/add_location"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>  
    <androidx.cardview.widget.CardView
            android:layout_margin="16dp"
            android:elevation="@dimen/cardview_default_elevation"
            app:cardCornerRadius="16dp"
            app:cardBackgroundColor="@color/colorGreen"
            android:id="@+id/cardAddInvestor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardAddLocation"
            android:layout_width="0dp"
            android:layout_height="80dp">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent">
            <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_investor_white"
            />
            <TextView android:layout_width="match_parent"
                      style="@style/Title1Style"
                      android:textColor="@color/white"
                      android:layout_gravity="center"
                      android:layout_marginStart="16dp"
                      android:gravity="center"
                      android:layout_height="wrap_content"
                      android:text="@string/add_investor"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
 <androidx.cardview.widget.CardView
            android:layout_margin="16dp"
            android:elevation="@dimen/cardview_default_elevation"
            app:cardCornerRadius="16dp"
            app:cardBackgroundColor="@color/colorGreen"
            android:id="@+id/cardAddRentRate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardAddInvestor"
            android:layout_width="0dp"
            android:layout_height="80dp">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent">
            <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_rentrate_white"
            />
            <TextView android:layout_width="match_parent"
                      style="@style/Title1Style"
                      android:textColor="@color/white"
                      android:layout_gravity="center"
                      android:layout_marginStart="16dp"
                      android:gravity="center"
                      android:layout_height="wrap_content"
                      android:text="@string/add_investor"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>